# inform-client-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  Makefile  README.md  VERSION  __init__.py  api_client.py  constants.py  dev-requirements.txt  exceptions.py  inform.py  inform_client.py  inform_sent_request.py  informclient.py  provider.py  requirements.txt  sandbox_client.py  session.py  sessions.py  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: pythonpackage.yml  test-and-publish.yml
api/request/: __init__.py
informclient/: __init__.py  informclient.py
informclient/api/: __init__.py
informclient/api/request/: request_validator.py
informclient/utils/: __init__.py
moengage/inform/client/api/: exception_handler.py
moengage/inform/client/api/conf/: provider.py
moengage/inform/client/api/configs/: config.json  provider.py
moengage/inform/client/api/request/: request_validator.py
moengage/inform/client/api/request/schemas/: schema-channelpayload.json  schema-payload.json  (+1 more)
moengage/inform/client/api/response/: inform_response.py  request_type.py  sent_response.py
moengage/inform/client/core/: client.py  inform_client.py  sandbox_client.py
moengage/inform/client/request/: inform_sent_request.py
moengage/inform/client/utils/: api_description.py  constants.py  exceptions.py  session.py
tests/: test_informclient.py  test_request_validator.py
tests/api/request/: test_request_validator.py
tests/informclient/: test_informclient.py
tests/informclient/api/request/: test_request_validator.py
utils/: __init__.py
