[metadata]
name = informclient
version = 0.0.1
author = Mohammad Tarique Anjum
author_email = mohammad.anjum@moengage.com
description = This Python Package helps you in sending notifications through MoEngage Inform
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/moengage/inform-client-python
project_urls =
    Bug Tracker = https://github.com/moengage/inform-client-python/issues
    repository = https://github.com/moengage/inform-client-python/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Customer Service
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = moengage
packages = find:
python_requires = >=3.9

[options.packages.find]
where = moengage